# enhances-ai-agent

./: .env.docker  .env.example  .gitignore  =2.0.0  AI_Agent_API.postman_collection.json  AI_Agent_Environments.postman_environment.json  BUILD_AND_RUN_GUIDE.md  DOCKER_README.md  Dockerfile  HOW_TO_RUN.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  PHASE1_IMPROVEMENTS.md  POSTMAN_COLLECTION_GUIDE.md  POSTMAN_QUICK_START.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  atlassian_config.py  atlassian_integration_example.py  build.sh  docker-compose.yml  docker-test.sh  fix_imports.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_docker.sh  start_api.py  test-build.sh  test_api_endpoints.sh  test_atlassian_integration.py  test_full_integration.py  test_imports.py  test_integrated_atlassian.py  verify_python312_compatibility.py
ai_agent/: __init__.py
ai_agent/api/: __init__.py  cli.py  interactive_cli.py  web_api.py
ai_agent/core/: __init__.py  agent.py  ai_client.py  code_reader.py  config.py  context_managers.py  query_processor.py  types.py
ai_agent/infrastructure/: __init__.py  advanced_ranking.py  batch_processor.py  cache_manager.py  health_checks.py  monitoring.py  reliability.py  semantic_search.py
ai_agent/mcp/: __init__.py
ai_agent/mcp/base/: __init__.py  mcp_base.py  utils.py
ai_agent/mcp/clients/: __init__.py  atlassian_client.py  confluence_client.py  integrated_atlassian_client.py  jira_client.py
ai_agent/mcp_atlassian/: __init__.py
ai_agent/mcp_atlassian/confluence/: client.py  config.py
ai_agent/mcp_atlassian/jira/: client.py  config.py
ai_agent/plugins/: __init__.py  plugin_system.py
ai_agent/tests/: test_agent.py  test_cache.py  test_query_processor.py  test_web_api.py
docker/: mock-confluence.json  mock-jira.json  nginx-confluence.conf  nginx-jira.conf
examples/: phase1_improvements_demo.py
monitoring/: prometheus.yml
test-mcp/: README.md  config.json.example  mcp_server.py  requirements.txt  run_tests.sh  test_mcp_confluence.py
